# LibraryRoomBookingSystem

./: .gitignore  README.md  jsconfig.json  package.json  pnpm-lock.yaml  setup-key.bat  setup-key.sh  svelte.config.js  vite.config.js
.github/workflows/: releases.yml
src/: app.html  styles.css
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240607082947_user.up.sql  20240607083055_admin.down.sql  20240607083055_admin.up.sql  20240607083147_room.down.sql  20240607083147_room.up.sql  20240607083239_booking.down.sql  20240607083239_booking.up.sql  20240607083248_payment.down.sql  20240607083248_payment.up.sql  20240607083253_bill.down.sql  20240607083253_bill.up.sql  20240607083301_feedback.up.sql  20240607083310_insert_data.down.sql  20240607083310_insert_data.up.sql  20240608070424_insert_room.down.sql  20240608070424_insert_room.up.sql
src-tauri/src/: main.rs  models.rs  private.pem  public.pem
src-tauri/tests/: Cargo.toml
src/lib/: auth.js  db.js  emoji.js  helper.js  showModal.js  store.js
src/lib/components/: Form.svelte  IconButton.svelte  Input.svelte  Modal.svelte  Navbar.svelte  SearchBar.svelte  Spinner.svelte  TableCard.svelte
src/lib/crypto/: hashing.js
src/lib/models/: bill.js  booking.js  feedback.js  payment.js  room.js  user.js
src/lib/repos/: bookingManageRepo.js  feedbackRepo.js  historyRepo.js  roomManageRepo.js  searchRepo.js  userManageRepo.js
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/(admin)/: +layout.js  +layout.svelte
(+30 files in other folders)
