[package]
name = "libraryroombookingsystem_tests"
version = "0.0.0"
description = "A Tauri App Tests"
authors = ["you"]
edition = "2021"

[dependencies]
assert_matches = "1.0.1"
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15"
libraryroombookingsystem = { path = "../libraryroombookingsystem" }